# amsi-etw-sc

./: .gitignore  CMakeLists.txt  README.md
asm/x64/: Loader.asm
include/: Common.h  Constexpr.h  HWBP.h  Instance.h  Ldr.h  Macros.h  Ntdll.h
scripts/: Linker.ld  extract.py
scripts/DbgLdr/: CMakeLists.txt  main.c
src/: HWBP.c  Ldr.c  Main.cpp  PreMain.cpp
